--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GO O NO GO - Chat en Tiempo Real</title>
+    <title>GO O NO GO - Chat en Tiempo Real | JUNIOR_ALVINES</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
@@ -73,6 +73,15 @@
             height: 300px;
             overflow-y: auto;
         }
+
+        .footer-brand {
+            background: linear-gradient(45deg, #198754, #20c997);
+            color: white;
+            text-align: center;
+            padding: 10px;
+            font-size: 0.9rem;
+            font-weight: 600;
+        }
     </style>
 </head>
 
@@ -113,6 +122,7 @@
                                 <div class="text-center text-muted">
                                     <i class="bi bi-chat-dots fs-1"></i>
                                     <p>No hay mensajes aún. ¡Sé el primero en escribir!</p>
+                                    <small>Chat desarrollado por JUNIOR_ALVINES</small>
                                 </div>
                             </div>
 
@@ -174,6 +184,12 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Footer con tu marca -->
+                    <div class="footer-brand">
+                        <i class="bi bi-code-slash"></i> Desarrollado por JUNIOR_ALVINES |
+                        <i class="bi bi-github"></i> github.com/JUNMPI/realtime-chat
+                    </div>
                 </div>
             </div>
         </div>
@@ -189,6 +205,17 @@
             </div>
             <div class="toast-body" id="errorToastBody">
                 <!-- Mensaje de error aquí -->
+            </div>
+        </div>
+
+        <div id="successToast" class="toast text-bg-success" role="alert">
+            <div class="toast-header">
+                <i class="bi bi-check-circle-fill text-success me-2"></i>
+                <strong class="me-auto">¡Conectado!</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body" id="successToastBody">
+                <!-- Mensaje de éxito aquí -->
             </div>
         </div>
     </div>
@@ -207,7 +234,7 @@
             }
 
             init() {
-                console.log('🚀 Inicializando ChatClient...');
+                console.log('🚀 Inicializando GO O NO GO Chat...');
 
                 this.elements = {
                     messages: document.getElementById('messages'),
@@ -224,10 +251,16 @@
                     onlineCount: document.getElementById('onlineCount'),
                     usernameError: document.getElementById('usernameError'),
                     errorToast: document.getElementById('errorToast'),
-                    errorToastBody: document.getElementById('errorToastBody')
+                    errorToastBody: document.getElementById('errorToastBody'),
+                    successToast: document.getElementById('successToast'),
+                    successToastBody: document.getElementById('successToastBody')
                 };
 
                 this.setupEventListeners();
+
+                // Mensaje de bienvenida en consola
+                console.log('💚 Chat desarrollado por JUNIOR_ALVINES');
+                console.log('🔗 GitHub: github.com/JUNMPI/realtime-chat');
             }
 
             setupEventListeners() {
@@ -286,8 +319,11 @@
                 this.elements.connectBtn.disabled = true;
                 this.elements.connectBtn.innerHTML = '<i class="bi bi-hourglass-split"></i> Conectando...';
 
+                // ⭐ RAILWAY: Detectar protocolo automáticamente
                 const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
                 const wsURL = `${protocol}//${window.location.host}/ws?username=${encodeURIComponent(username)}`;
+
+                console.log('🌐 Conectando a:', wsURL);
 
                 this.socket = new WebSocket(wsURL);
 
@@ -353,6 +389,9 @@
                 this.updateConnectionDetails('success', 'Conectado al servidor');
                 this.toggleUI(true);
                 this.addSystemMessage(`Te has conectado al chat como "${data.username}"`);
+
+                // Mostrar toast de éxito
+                this.showSuccessToast(`¡Conectado exitosamente como ${data.username}!`);
 
                 // Restaurar botón
                 this.elements.connectBtn.disabled = false;
@@ -600,6 +639,12 @@
                 toast.show();
             }
 
+            showSuccessToast(message) {
+                this.elements.successToastBody.textContent = message;
+                const toast = new bootstrap.Toast(this.elements.successToast);
+                toast.show();
+            }
+
             scrollToBottom() {
                 this.elements.messages.scrollTop = this.elements.messages.scrollHeight;
             }
@@ -613,7 +658,8 @@
 
         // Inicializar cuando el DOM esté listo
         document.addEventListener('DOMContentLoaded', () => {
-            console.log('🎬 DOM cargado, iniciando chat...');
+            console.log('🎬 DOM cargado, iniciando GO O NO GO Chat...');
+            console.log('👨‍💻 Desarrollado por JUNIOR_ALVINES');
             new ChatClient();
         });
     </script>
