--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
                     <!-- Footer con tu marca -->
                     <div class="footer-brand">
-                        <i class="bi bi-code-slash"></i> Desarrollado por JUNIOR_ALVINES |
+                        <i class="bi bi-code-slash"></i> Desarrollado por JUNIOR_ALVINES & SheralA16 |
                         <i class="bi bi-github"></i> github.com/JUNMPI/realtime-chat
                     </div>
                 </div>
