--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <div class="text-center text-muted">
                                     <i class="bi bi-chat-dots fs-1"></i>
                                     <p>No hay mensajes aún. ¡Sé el primero en escribir!</p>
-                                    <small>Chat desarrollado por JUNIOR_ALVINES</small>
+                                    <small>Chat desarrollado por JUNIOR_ALVINES & SheralA16</small>
                                 </div>
                             </div>
 
